--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ ul {
     padding-bottom: 24px;
     display: block;
     transition: color 250ms;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
-}
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}*/
+
 
 .header-navigation {
     display: flex;
@@ -164,8 +164,8 @@ ul {
 .mobile-button-open {
     border: none;
     background-color: var(--hero-color);
-    gap: 249px;
-    margin-left: 24px;
+    /*gap: 249px;
+    margin-left: 24px;*/
 }
 
 .button-open-icon {
@@ -303,12 +303,12 @@ ul {
 }
 
 
-/*.header-soc {
+.header-soc {
     list-style: none;
 }
 
 
-.header-soc-link {
+/*.header-soc-link {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -322,8 +322,8 @@ ul {
 
 .header-soc-link:is(:hover, :focus) {
     color: var(--hover-color);
-}
-*/
+}*/
+
 
 
 /**!HERO*/
@@ -345,11 +345,11 @@ ul {
 @media (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
-    /* .hero {
+    .hero {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url(../images/peopleofficemobx.jpg);
-    }*/
+    }
 }
 
 .hero-container {}
@@ -452,6 +452,7 @@ ul {
 /**!PRODUCTS*/
 
 .products {
+    display: none;
     padding-bottom: 120px;
 }
 
@@ -536,7 +537,7 @@ ul {
 .team-list {
     /* width: 1158px;*/
     display: flex;
-    gap: 72px;
+    gap: 72px 24px;
     flex-wrap: wrap;
     justify-content: center;
 
@@ -592,7 +593,7 @@ ul {
     column-gap: 16px;
     row-gap: 72px;
     flex-wrap: wrap;
-    justify-content: center;
+    /*justify-content: center;*/
 }
 
 .customers-list {
@@ -1198,6 +1199,7 @@ input:focus+.modal-form-icon {
     /* header */
 
     .header-menu {
+        /*text-align: center;*/
         display: flex;
         gap: 40px;
     }
@@ -1221,27 +1223,36 @@ input:focus+.modal-form-icon {
         color: var(--hover-color);
     }
 
+
+    .header-soc {
+
+        display: flex;
+        font-style: normal;
+        margin-left: auto;
+    }
+
+
     .header-address {
         display: flex;
         font-style: normal;
         margin-left: auto;
     }
 
-    .header-adress-mail {
+    .header-soc-link {
         color: var(--main-text-color);
         font-size: 12px;
         font-family: Roboto;
         font-style: normal;
         font-weight: 400;
-        line-height: 1.2;
+        line-height: 1.4;
         letter-spacing: 0.04em;
     }
 
-    .header-adress-mail:hover {
+    .header-soc-link:hover {
         color: var(--hover-color);
     }
 
-    .header-adress-mail:focus {
+    .header-soc-link:focus {
         color: var(--hover-color);
     }
 
@@ -1281,18 +1292,18 @@ input:focus+.modal-form-icon {
 
     /* section 2 */
 
-    .professionalism-list {
+    .benefits-list {
         margin-left: auto;
         margin-right: auto;
         gap: 24px;
         row-gap: 72px;
     }
 
-    .professionalism-item {
+    .benefits-item {
         width: calc((100% - 24px) / 2);
     }
 
-    .professionalism-subtitle {
+    .benefits-subtitle {
         text-align: left;
         color: var(--title-color);
         line-height: 1.1111;
@@ -1303,8 +1314,9 @@ input:focus+.modal-form-icon {
     /* section 4 */
 
     .teem-list {
-        column-gap: 24px;
-        row-gap: 64px;
+        gap: 72px 24px;
+        /*column-gap: 24px;
+        row-gap: 64px;*/
     }
 
     /* section 5 */
@@ -1319,11 +1331,11 @@ input:focus+.modal-form-icon {
     }
 
     .customers-list {
-        width: calc((100% - 120px) / 3);
+        width: calc((100% - 48px) / 3);
     }
 
     /* footer */
-    .container-footer {
+    .footer-container {
         justify-content: flex-start;
         width: 584px;
     }
@@ -1387,6 +1399,7 @@ input:focus+.modal-form-icon {
     /* header */
 
     .header-contact {
+        flex-direction: row;
         display: flex;
         gap: 40px;
     }
@@ -1424,20 +1437,22 @@ input:focus+.modal-form-icon {
 
     /* section 2 */
 
-    .professionalism {
+    .benefits {
         padding: 120px 0;
     }
 
-    .professionalism-list {
+    .benefits-list {
         width: 100%;
         flex-wrap: unset;
     }
 
-    .professionalism-item-image {
+    .benefits-image {
         display: flex;
+        width: 100%;
+        gap: 24px;
     }
 
-    .professionalism-subtitle {
+    .benefits-subtitle {
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
@@ -1445,7 +1460,7 @@ input:focus+.modal-form-icon {
 
     /* section 3 */
 
-    .action {
+    .products {
         display: block;
     }
 
@@ -1479,7 +1494,7 @@ input:focus+.modal-form-icon {
 
     /* footer */
 
-    .container-footer {
+    .footer-container {
         justify-content: center;
         padding: 0;
         width: 1140px;
