--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,8 @@ h6 {
     margin: 0 auto;
     outline: 2px solid red;
     padding: 0 15px 0 15px;
-    /* background-color: var(--title-color);*/
+    /* background-color: var(--title-color);
+    */
 }
 
 
@@ -99,7 +100,7 @@ ul {
     color: var(--logo-color);
     display: flex;
     align-items: center;
-    margin-right: 220px;
+    margin-right: 76px;
     transition: color 250ms;
 }
 
@@ -138,7 +139,7 @@ ul {
 
 .header-soc {
     display: flex;
-    gap: 40px;
+    gap: 12px;
 }
 
 .header-menu-link:is(:hover, :focus) {
@@ -241,7 +242,18 @@ ul {
     text-transform: capitalize;
 }
 
-.mob-menu-link:hover {
+.mob-studio-link {
+    color: var(--hover-color);
+    font-size: 36px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.1111;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+. .mob-menu-link:hover {
     color: var(--ocean, #404bbf);
 }
 
@@ -441,7 +453,7 @@ ul {
 }
 
 .benefits-item-text {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -746,6 +758,7 @@ ul {
 /*subscribe*/
 
 .subscribe {
+    width: 428px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -772,6 +785,7 @@ ul {
 }
 
 .subscribe-input {
+    padding: 15px;
     width: 100%;
     height: 40px;
     border: 1px solid #ffffff;
@@ -986,7 +1000,7 @@ ul {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 408px;
+    width: calc(100%-30px);
     min-height: 584px;
     background: var(--modal-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -1213,6 +1227,7 @@ input:focus+.modal-form-icon {
         display: block;
         transition: color 250ms;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        color: var(--title-color)
     }
 
     .header-menu-link:hover {
@@ -1227,6 +1242,7 @@ input:focus+.modal-form-icon {
     .header-soc {
 
         display: flex;
+        flex-direction: column;
         font-style: normal;
         margin-left: auto;
     }
@@ -1240,7 +1256,7 @@ input:focus+.modal-form-icon {
 
     .header-soc-link {
         color: var(--main-text-color);
-        font-size: 12px;
+        font-size: 16px;
         font-family: Roboto;
         font-style: normal;
         font-weight: 400;
